--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.1.1
   shared_preferences: ^2.5.3
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
